[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-battery-rl"
version = "1.0.0"
description = "Fair risk-sensitive control benchmark for a single-qubit quantum battery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Sangkeum Lee", email = "sklee@hanbat.ac.kr"},
]
keywords = ["quantum battery", "robust control", "Lindblad", "ergotropy", "CVaR"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "gymnasium>=0.28",
    "pydantic>=2.11,<3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest", "matplotlib>=3.7"]

[project.urls]
Repository = "https://github.com/ecoailab/quantum-battery-risk-control"

[tool.setuptools.packages.find]
include = ["quantum_battery_rl*"]
